<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tommy.wxzj.NewInfoActivity">

    <EditText
        android:id="@+id/view_name"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="100dp"
        android:layout_height="@dimen/text_field_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/name"
        android:inputType="none|textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/view_sex"
        android:layout_width="111dp"
        android:layout_height="@dimen/text_field_height"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/sex"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/view_name"
        app:layout_constraintTop_toTopOf="@+id/view_name" />


    <EditText
        android:id="@+id/view_age"
        android:layout_width="111dp"
        android:layout_height="@dimen/text_field_height"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/view_sex"
        app:layout_constraintTop_toTopOf="@+id/view_sex" />

    <EditText
        android:id="@+id/view_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/view_phone"
        app:layout_constraintTop_toBottomOf="@+id/view_phone" />

    <EditText
        android:id="@+id/view_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_sex" />

    <EditText
        android:id="@+id/view_addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        app:layout_constraintStart_toStartOf="@+id/view_email"
        app:layout_constraintTop_toBottomOf="@+id/view_email" />

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:layout_marginStart="16dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/report"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_confirm" />

    <Spinner
        android:id="@+id/view_time"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_addr" />

</android.support.constraint.ConstraintLayout>
